# rk3588-npu

./: README.md  meson.build
include/: npu_cna.h  npu_dpu.h  npu_hw.h  npu_interface.h  npu_matmul.h  rknpu-ioctl.h
src/: npu_interface.c  npu_matmul.c
tests/: matmul_4_36_16.c  matmul_fp16.c  matmul_fp16_fp16.c  matmul_int8.c
